# Support-for-preparing-blue-tax-returns

./: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json
docs/: design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_financial_statements.sql  003_loss_carryforward.sql
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src/components/: AccountList.tsx  BalanceSheet.tsx  FinalStatement.tsx  FixedAssetList.tsx  JournalEntryForm.tsx  JournalEntryList.tsx  Layout.tsx  LossCarryforwardList.tsx  ProfitLoss.tsx  RentDetailList.tsx  SimpleEntryForm.tsx  TrialBalance.tsx
src/lib/: accountHelp.ts  api.ts  format.ts
src/types/: index.ts
